# ScriptMidi

./: .gitignore  README.md  ScriptMidi.cabal
src/: scriptMidi.hs
