name:                ScriptMidi
version:             0.1.0.0
synopsis:            ScriptMidi Project...
homepage:            http://github.com/sordina/ScriptMidi
license:             MIT
license-file:        LICENSE
author:              Lyndon Maydwell
maintainer:          maydwell@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable scriptmidi
  main-is:             scriptMidi.hs
  build-depends:       base -any, hmidi, process, safe
  hs-source-dirs:      src
  default-language:    Haskell2010
